--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "axonteamcdn",
   "version": "0.8.0",
   "description": "A content delivery network for axonteam",
-  "main": "main.js",
+  "main": "cdnMain.js",
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "superagent": "^4.1.0"
   },
   "devDependencies": {},
   "scripts": {
