--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A content delivery network for axonteam",
   "main": "cdnMain.js",
   "dependencies": {
+    "@axonteam/eslint-config-axonteam": "^2.0.3",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
